# STX-ETX-Parser

./: .gitmodules  Makefile
artifacts/: .gitignore
source/: CMakeLists.txt
source/src/: CMakeLists.txt  STX_ETX.c  STX_ETX.h
source/toolchains/: generic.cmake
source/unittests/: CMakeLists.txt
source/unittests/framework/: CMakeLists.txt  UnitTest.cmake  config.yml
source/unittests/test/: TC_STX_ETX.c
